--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,34 @@
+body {
+  font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
 h1 {
-  color: blue;
+  font-size: 26px;
+  font-weight: 100;
+  line-height: 28px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  color: #878787;
+  font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
+  display: block;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: none;
+  margin-bottom: 0;
+  text-align: left;
 }
