--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,6 @@
 body {
   font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
 }
-
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
-}
 h1 {
   font-size: 26px;
   font-weight: 100;
@@ -20,15 +12,38 @@ ul {
 }
 li {
   color: #878787;
-  font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
-  display: block;
-
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 100;
   line-height: 20px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  margin-bottom: 0;
-  text-align: left;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-temperature img {
+  margin-right: 10px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 65px;
+  font-weight: 500;
+  line-height: 1;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -36px;
+}
+.overview {
+  margin-bottom: 20px;
 }
