--- a/src/style.css
+++ b/src/style.css
@@ -48,3 +48,17 @@ li {
 .overview {
   margin-bottom: 20px;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+.weather-forecast-date {
+  font-size: 16px;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
